# solid-file-python

./: .gitignore  LICENSE  Makefile  README.md  changelog.txt  requirements.txt  setup.cfg  solid-file-python-getting-start.ipynb  solid_file_python_getting_start.ipynb
.github/workflows/: codeql-analysis.yml  continuous-integration.yml
resources/postman/: RDF.json  basic-operations.json  nss-login.json  profile-card.json
src/solid/: auth.py  solid_api.py
src/solid/utils/: api_util.py  folder_utils.py
tests/: integration_test_auth.py  integration_test_solid_api.py  test_api_util.py  test_auth.py  test_folder_utils.py  test_solid_api.py
