[metadata]
name = solid-file
version = 0.2.0
author = hrchu
author_email = petertc.chu@gmail.com
description = Solid Python library (http://solidproject.org)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/twonote/solid-file-python
project_urls =
    Bug Tracker = https://github.com/twonote/solid-file-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Systems Administration
    Topic :: Utilities
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    httpx==0.18.2
    rdflib==5.0.0

[options.packages.find]
where = src
